--- a/pages/orderDetail/orderDetail.wxml
+++ b/pages/orderDetail/orderDetail.wxml
@@ -8,82 +8,100 @@
 
 	<view class="card">
 		<view class="title">
-			订单号
+			{{orderDetail.code}}
 		</view>
 		<view class="flexTitle">
 			<view class="w30">下单公司</view>
-			<view class="w70" style="color: #333333;">公司名-联系人名</view>
+			<view class="w70" style="color: #333333;">{{orderDetail.client_name}}-{{orderDetail.contacts_name || '无'}}</view>
 		</view>
 		<view class="flexTitle">
 			<view class="w30">创建人</view>
-			<view class="w70" style="color: #333333;">王先生</view>
+			<view class="w70" style="color: #333333;">{{orderDetail.user_name}}</view>
 		</view>
 		<view class="flexTitle">
 			<view class="w30">创建时间</view>
-			<view class="w70" style="color: #333333;">2022-02-02</view>
+			<view class="w70" style="color: #333333;">{{orderDetail.created_at}}</view>
 		</view>
 		<view class="flexTitle">
 			<view class="w30">订单状态</view>
-			<view class="w70" style="color: #FA3643;">已逾期</view>
+			<view class="w70 colorOrange" wx:if="{{orderDetail.status === 1}}">已创建</view>
+			<view class="w70 color27A2" wx:if="{{orderDetail.status === 2}}">进行中</view>
+			<view class="w70 color03d0" wx:if="{{orderDetail.status === 3}}">已完成</view>
+			<view class="w70 color03d0" wx:if="{{orderDetail.status === 4}}">已结算</view>
+			<view class="w70 colorFA36" wx:if="{{orderDetail.status === 5}}">已逾期</view>
+			<view class="w70 colorFA36" wx:if="{{orderDetail.status === 6}}">已取消</view>
 		</view>
 		<view class="flexTitle">
 			<view class="w30">下单时间</view>
-			<view class="w70" style="color: #333333;">2022-02-02</view>
+			<view class="w70" style="color: #333333;">{{orderDetail.time_data[0].order_time}}</view>
 		</view>
 		<view class="flexTitle">
 			<view class="w30">下单数量</view>
-			<view class="w70" style="color: #333333;">1 款，3900 件</view>
+			<view class="w70" style="color: #333333;">{{orderDetail.time_data[0].total_style}}
+				款，{{orderDetail.time_data[0].total_number}} 件</view>
 		</view>
 		<view class="flexTitle">
 			<view class="w30">币种汇率</view>
-			<view class="w70" style="color: #333333;">元/100</view>
+			<view class="w70" style="color: #333333;">{{orderDetail.settle_unit}}/{{orderDetail.settle_tax}}</view>
 		</view>
 		<view class="flexTitle">
 			<view class="w30">下单金额</view>
-			<view class="w70" style="color: #333333;">3900.00 元</view>
+			<view class="w70" style="color: #333333;">{{orderDetail.time_data[0].total_price}} 元</view>
 		</view>
 		<view class="flexTitle">
 			<view class="w30">负责小组</view>
-			<view class="w70" style="color: #333333;">王先生</view>
+			<view class="w70" style="color: #333333;">{{orderDetail.group_name}}</view>
 		</view>
 		<view class="flexTitle">
 			<view class="w30">特殊要求</view>
-			<view class="w70" style="color: #FA9036;">产前样寄送，产前确认，加急</view>
-		</view>
-		<view class="flexTitle">
-			<view class="w30">公开文件</view>
-			<view class="w70" style="color: #008DF9;">产品参考图三</view>
+			<view class="w70 flex" style="color: #FA9036;">
+				<view>{{orderDetail.time_data[0].is_send===1?'产前寄送样':''}}</view>
+				<view>{{orderDetail.time_data[0].is_before_confirm===1?'产前确认':''}}</view>
+				<view>{{orderDetail.time_data[0].is_urgent===1?'加急':''}}</view>
+			</view>
 		</view>
 		<view>
 			<view style="color: #666666;">备注信息</view>
-			<view class="mt10" style="color: #333333;">123131321321321321</view>
+			<view class="mt10" style="color: #333333;">{{orderDetail.desc||'无'}}</view>
 		</view>
 	</view>
 
 	<view class="card">
 		<view class="title">产品信息</view>
-		<view>
-			<view class="flex">
-				<view class="w40">
-					<van-image width="100" height="100" fit="cover" src="https://img.yzcdn.cn/vant/cat.jpeg" />
+		<view wx:for="{{productList}}" wx:for-item="item" wx:key="item" wx:for-index="index">
+			<view class="flex mb20">
+				<view class="w30">
+					<van-image width="100" height="100" fit="cover"
+						src="{{item.image_data[0]||'https://file.zwyknit.com/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20220211103236.png'}}" />
 				</view>
-				<view class="w60">
-					<view>CSXBCP-2200033-01Y</view>
-					<view>38支腈纶围巾</view>
-					<view class="flex jcsb">
-						<view>围巾/针织</view>
-						<view class="flex w30 jcsb">
-							<view>1</view>
-							<view>2</view>
-							<view>3</view>
+				<view class="w70 flex fdc jcsb">
+					<view>
+						<view class="color27A2">{{item.product_code}}</view>
+						<view>{{item.name}}</view>
+					</view>
+					<view class="flex jcsb aic">
+						<view>{{item.category}}/{{item.secondary_category}}</view>
+						<view class="flex w40 jcsb">
+							<view class="tc" wx:if="{{item.craft_list_id}}"
+								style="border: 1px solid #03d0a2;color:#03d0a2;width:25px;height:25px;border-radius: 1000px;">工</view>
+							<view class="tc" wx:if="{{!item.craft_list_id}}"
+								style="border: 1px solid #9c9c9c;color:#9c9c9c;width:25px;height:25px;border-radius: 1000px;">工</view>
+							<view class="tc" wx:if="{{item.rel_quote_info.quote_id}}"
+								style="border: 1px solid #03d0a2;color:#03d0a2;width:25px;height:25px;border-radius: 1000px;">报</view>
+							<view class="tc" wx:if="{{!item.rel_quote_info.quote_id}}"
+								style="border: 1px solid #9c9c9c;color:#9c9c9c;width:25px;height:25px;border-radius: 1000px;">报</view>
+							<view class="tc" wx:if="{{item.client_edit_idea}}"
+								style="border: 1px solid #03d0a2;color:#03d0a2;width:25px;height:25px;border-radius: 1000px;">修</view>
+							<view class="tc" wx:if="{{!item.client_edit_idea}}"
+								style="border: 1px solid #9c9c9c;color:#9c9c9c;width:25px;height:25px;border-radius: 1000px;">修</view>
 						</view>
 					</view>
 				</view>
 			</view>
-			<view class="flex jcsb">
-				<view>123</view>
-				<view>123</view>
-				<view>123</view>
+			<view class="flex jcsb mt5" wx:for="{{item.product_info}}" wx:for-item="itemPro" wx:key="itemPro" wx:for-index="indexPro">
+				<view class="w50">{{itemPro.size_name}}/{{itemPro.color_name}}</view>
+				<view>{{itemPro.price}}{{orderDetail.settle_unit}}</view>
+				<view>{{itemPro.number}}</view>
 			</view>
 		</view>
 	</view>
